<resources>
    <string name="app_name">StoryApp</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_hv_acc">Don\'t have an Account ? Register</string>
    <string name="hv_acc">Have an Account ? Login</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="storiesimage">StoriesImage</string>
    <string name="logout">LogOut</string>
    <string name="add">Add</string>
    <string name="upload">Upload</string>
    <string name="camera_x">Camera X</string>
    <string name="gallery">Gallery</string>
    <string name="profile">profile</string>
    <string name="failed_take_picture">Failed to Take Picture</string>
    <string name="failed_open_camera">Failed to Open Camera</string>
    <string name="doesnt_get_permission">Doesn\'t Get Permission</string>
    <string name="fill_in">Please Fill In</string>
    <string name="choose_picture">Choose a Picture</string>
    <string name="failed_retrofit">Failed Retrofit Instance</string>
    <string name="select_image">Please Select Image First</string>
    <string name="invalid_email">Invalid Email Addresss</string>
    <string name="minimum_password">Password Minimum Length is 6</string>
    <string name="login_sucess">Login Success</string>
    <string name="minimum_name">Name Minimum Length is 2</string>
    <string name="register">Register</string>
    <string name="language">Language</string>
    <string name="logo">logo</string>
    <string name="image">image</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="google_map">GoogleMap</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal Type</string>
    <string name="retry">Retry</string>
</resources>